--- a/index.html
+++ b/index.html
@@ -3,52 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <title>MusicDot - Sobre a Empresa</title>
-    <link rel="stylesheet" href="css-atividade4.css">
+    <link rel="stylesheet" href="css.atividade4.css">
 </head>
-
 <body>
 
     <img src="logo.svg" alt="MusicDot">
 
     <h1>Sobre a empresa</h1>
 
-    <p>A MusicDot é a maior escola online de música em todo o mundo. Fundada em 1932, possui estúdios em 124 países,
-        sendo líder de mercado com mais de 90% de participação em 118 deles.</p>
+    <p>A MusicDot é a maior escola online de música em todo o mundo. Fundada em 1932,
+    possui estúdios em 124 países, sendo líder de mercado com mais de 90% de participação
+    em 118 deles.</p>
 
-    <p>Nossa matriz fica em <a href="#">Mafra, em Santa Catarina</a>. De lá, saem grande parte das gravações de nossos cursos. Nossa matriz:</p>
+    <p>Nossa matriz fica em Mafra, em Santa Catarina. De lá, saem grande parte das gravações
+    de nossos cursos. Nossa matriz:</p>
 
-    <!-- FIGURA MATRIZ -->
     <figure class="matriz">
         <img src="matriz-musicdot.png" alt="Matriz MusicDot">
         <figcaption>Matriz MusicDot</figcaption>
     </figure>
 
-    <p>Assine os cursos da MusicDot. Acesse <a href="#">nosso site</a> ou entre em contato se tiver dúvidas.
-        Conheça também <a href="#">nossa história</a> e <a href="#">nossos diferenciais</a>.</p>
+    <p>Assine os cursos da MusicDot. Acesse nosso site ou entre em contato se tiver dúvidas.
+    Conheça também nossa história e nossos diferenciais.</p>
 
     <h2>História</h2>
 
-    <!-- FIGURA FAMÍLIA -->
     <figure class="familia">
         <img src="familia-tupfeln.jpg" alt="Família Tüpflen">
         <figcaption>Família Tüpflen</figcaption>
     </figure>
 
-    <p>A fundação em 1932 ocorreu no momento da descoberta econômica de cursos por stream online no interior de
-        Santa Catarina. A família Tüpflen, tradicional da região, investiu todas as suas economias nessa nova iniciativa,
-        revolucionária para a época.</p>
+    <p>A fundação em 1932 ocorreu no momento da descoberta econômica de cursos por stream
+    online no interior de Santa Catarina. A família Tüpflen, tradicional da região, investiu
+    todas as suas economias nessa nova iniciativa, revolucionária para a época.</p>
 
-    <p>A fundadora frau Dagmar Olaf Tüpflen, dotada de particular visão administrativa, guiou os negócios da empresa
-        durante mais de 50 anos, muitos deles ao lado de seu filho Ernst Noten Tüpflen, atual CEO. O nome da empresa é
-        inspirado no nome da família.</p>
+    <p>A fundadora frau Dagmar Olaf Tüpflen, dotada de particular visão administrativa,
+    guiou os negócios da empresa durante mais de 50 anos, muitos deles ao lado de seu filho
+    Ernst Noten Tüpflen, atual CEO. O nome da empresa é inspirado no nome da família.</p>
 
-    <p>O crescimento da empresa foi praticamente instantâneo. Nos primeiros 5 anos, já atendia 18 países. Bateu a marca
-        de 100 países em apenas 15 anos de existência. Até hoje, já atendeu 2 bilhões de usuários diferentes, em bilhões
-        de diferentes pedidos.</p>
+    <p>O crescimento da empresa foi praticamente instantâneo. Nos primeiros 5 anos, já
+    atendia 18 países. Bateu a marca de 100 países em apenas 15 anos de existência. Até
+    hoje, já atendeu 2 bilhões de usuários diferentes, em bilhões de diferentes pedidos.</p>
 
-    <p>O crescimento em número de funcionários é também assombroso. Hoje, é a maior empregadora do Brasil, mas mesmo
-        após apenas 5 anos de sua existência, já possuía 30 mil funcionários. Fora do Brasil, há 240 mil funcionários,
-        além dos 890 mil brasileiros nas instalações de Mafra e nos escritórios em todo o país.</p>
+    <p>O crescimento em número de funcionários é também assombroso. Hoje, é a maior
+    empregadora do Brasil, mas mesmo após apenas 5 anos de sua existência, já possuía
+    30 mil funcionários. Fora do Brasil, há 240 mil funcionários, além dos 890 mil
+    brasileiros nas instalações de Mafra e nos escritórios em todo o país.</p>
 
     <h2>Diferenciais</h2>
 
@@ -58,8 +58,8 @@
         <li>Pague em reais, dólares, euros, libras, dogecoins, litecoins ou bitcoins</li>
         <li>Todos os cursos acompanham acesso à Alura</li>
         <li>Maior escola de música online do mundo</li>
-        <li>Atendimento via telefone, e-mail, chat, Twitter, Facebook, Instagram, ICQ, WhatsApp, SMS, carta, fax,
-            sinal de fumaça e telegrama</li>
+        <li>Atendimento via telefone, e-mail, chat, Twitter, Facebook, Instagram, ICQ,
+            WhatsApp, SMS, carta, fax, sinal de fumaça e telegrama</li>
         <li>Presente em 124 países</li>
         <li>Mais de um milhão de funcionários em todo o mundo</li>
     </ul>
